<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ImageView
			android:layout_width="89dp"
			android:layout_height="89dp"
			android:id="@+id/aboutIcon"
			android:layout_gravity="center_horizontal"
			android:src="@drawable/ic_launcher"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/app_name"
			android:layout_gravity="center_horizontal"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/link"
			android:autoText="false"
			android:autoLink="web"
			android:layout_gravity="center_horizontal"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/about_thanks"/>

	</LinearLayout>

</ScrollView>

