<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/layout_shortcut"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="#252525"
	android:weightSum="1"
	tools:context="in.celest.xash3d.LauncherActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#3F3F3F"
		android:orientation="vertical">

		<TextView
			android:id="@+id/textView_tittle"
			android:layout_width="fill_parent"
			android:layout_height="35dp"
			android:layout_margin="5dp"
			android:background="#555555"
			android:text="@string/app_name"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="20sp"
			android:singleLine="true"
			android:gravity="center"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1.25"
		android:paddingBottom="5dp"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
		android:paddingTop="5dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#3F3F3F">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:background="#555555"
				android:orientation="vertical">

				<TextView
					android:id="@+id/textView_args"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:layout_marginTop="5dp"
					android:text="@string/cmd_args_text"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:gravity="center"
					android:textSize="15sp"/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:background="#4C4C4C">

					<EditText
						android:id="@+id/cmdArgs"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:layout_marginTop="5dp"/>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="#444444"
		android:layout_marginBottom="-20dp"
		android:layout_gravity="bottom"
		android:orientation="horizontal">

		<Button
			android:id="@+id/button_about"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:onClick="aboutXash"
			android:text="@string/about_button"/>

		<Button
			android:id="@+id/button_launch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_column="6"
			android:layout_weight="0.87"
			android:onClick="startXash"
			android:text="@string/launch_button"/>

	</LinearLayout>

</LinearLayout>